--- a/sandcastle-battle/index.html
+++ b/sandcastle-battle/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
 
     
-    <title>Defend Castle - HTML5 Game</title>
-    <meta content='License Defend Castle - HTML5 Game' name='description' />
+    <title>Sandcastle Battle - HTML5 Game</title>
+    <meta content='License Sandcastle Battle - HTML5 Game' name='description' />
     
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="assets/css/app.css" type="text/css"/>
