--- a/titanic-heartbreak/index.html
+++ b/titanic-heartbreak/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Titanic Heartbreak - Buy HTML5 Game</title>
-    <meta description="Titanic Heartbreak - Buy HTML5 Game" />
+    <meta content='Titanic Heartbreak - Buy HTML5 Game' name='description' />
     <meta name="keywords" content="Titanic Heartbreak, Forestry Games">
     <meta name="author" content="Forestry Games">
     <link rel="icon" type="image/GIF" href="res/favicon.ico" />
