--- a/keepout/index.html
+++ b/keepout/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
-  
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>Keep Out! - An HTML5 WebGL Game</title>
-    <meta property="og:title"
-    content="Keep Out! - An HTML5 WebGL Game">
+    <meta property="og:title" content="Keep Out! - An HTML5 WebGL Game">
     <meta name="description" content="Keep Out! An action-packed adventure playable for free in your browser. Explore the dungeon, fight monsters and unlock epic weapons!">
-
     <link rel='stylesheet' href='css/normalize.css' type='text/css'>
     <link rel='stylesheet' href='css/main.css' type='text/css'>
     <link rel="icon" sizes="" href="icons/favicon.png">
@@ -19,34 +17,33 @@
     <link rel="apple-touch-icon" sizes="120x120" href="icons/icon120.png">
     <link rel="apple-touch-icon" sizes="152x152" href="icons/icon152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="icons/icon180.png">
-  </head>
-  
-  <body>
+</head>
+
+<body>
     <div id="preload" style="display:none">
-      <img src="img/common/modals/about.png" />
-      <img src="img/common/modals/landscape-modal.png" />
-      <img src="img/common/modals/large-modal.png" />
-      <img src="img/common/modals/modal-button.png" />
-      <img src="img/common/modals/portrait-modal.png" />
-      <img src="img/common/modals/separator.png" />
-      <img src="img/common/sharing/facebook.png" />
-      <img src="img/common/sharing/gplus.png" />
-      <img src="img/common/sharing/twitter.png" />
-      <img src="img/home/button-continue.png" />
-      <img src="img/home/button.png" />
-      <img src="img/home/info-icon.png" />
-      <img src="img/home/logo.png" />
-      <img src="img/home/lw.png" />
-      <img src="img/home/mobile-ribbon.png" />
-      <img src="img/home/spinner.png" />
-      <img src="img/home/title-mobile-portrait.jpg" />
-      <img src="img/home/title-torch.jpg" />
+        <img src="img/common/modals/about.png" />
+        <img src="img/common/modals/landscape-modal.png" />
+        <img src="img/common/modals/large-modal.png" />
+        <img src="img/common/modals/modal-button.png" />
+        <img src="img/common/modals/portrait-modal.png" />
+        <img src="img/common/modals/separator.png" />
+        <img src="img/common/sharing/facebook.png" />
+        <img src="img/common/sharing/gplus.png" />
+        <img src="img/common/sharing/twitter.png" />
+        <img src="img/home/button-continue.png" />
+        <img src="img/home/button.png" />
+        <img src="img/home/info-icon.png" />
+        <img src="img/home/logo.png" />
+        <img src="img/home/lw.png" />
+        <img src="img/home/mobile-ribbon.png" />
+        <img src="img/home/spinner.png" />
+        <img src="img/home/title-mobile-portrait.jpg" />
+        <img src="img/home/title-torch.jpg" />
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/underscore-min.js"></script>
     <script src="js/backbone-min.js"></script>
     <script src="js/main.min.js"></script>
-
-  </body>
+</body>
 
 </html>
