--- a/unikitty-sparkle-blaster/index.html
+++ b/unikitty-sparkle-blaster/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,72 +8,68 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta http-equiv="cleartype" content="on">
-
     <script>
-
-        window.game_config =
-        {
-            "default_language"  : "en_GB",
-            "base_assets_url"   : "./",
-            "base_locale_url"   : "./locale/",
-            "base_script_url"   : "./"
-        }
-
+    window.game_config = {
+        "default_language": "en_GB",
+        "base_assets_url": "./",
+        "base_locale_url": "./locale/",
+        "base_script_url": "./"
+    }
     </script>
-
     <style>
-        html,
-        body {
-            margin      : 0;
-            padding     : 0;
-            width       : 100%;
-            height      : 100%;
-            overflow    : hidden;
-            background  : #505050;
-        }
+    html,
+    body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background: #505050;
+    }
 
-        .rotate
-        {
-            width                   : 100%;
-            height                  : 100%;
-            position                : absolute;
-            z-index                 : 2;
-            background-position     : center;
-            background-size         : cover;
-            display                 : none;
-        }
+    .rotate {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: 2;
+        background-position: center;
+        background-size: cover;
+        display: none;
+    }
 
-        .rotate.active{display : block}
+    .rotate.active {
+        display: block
+    }
 
-        .rotate .icon
-        {
-            background-position     : center;
-            background-size         : contain;
-            width                   : 100%;
-            height                  : 100%;
-            max-width               : 400px;
-            background-repeat       : no-repeat;
-            margin                  : auto;
+    .rotate .icon {
+        background-position: center;
+        background-size: contain;
+        width: 100%;
+        height: 100%;
+        max-width: 400px;
+        background-repeat: no-repeat;
+        margin: auto;
 
-        }
+    }
     </style>
 </head>
+
 <body>
     <div id="game_container" style="width:100%; height:100%; position:absolute"></div>
-    <div id="rotate" class="rotate"><div class="icon"></div></div>
+    <div id="rotate" class="rotate">
+        <div class="icon"></div>
+    </div>
 </body>
+<script>
+var script = document.createElement('script');
+script.src = window.game_config.base_script_url + "dist/phaser.min.js";
+document.body.appendChild(script);
 
-    <script>
-        var script = document.createElement('script');
-        script.src = window.game_config.base_script_url+"dist/phaser.min.js";
-        document.body.appendChild(script);
-
-        window.onload = function()
-        {
-            script = document.createElement('script');
-            script.src = window.game_config.base_script_url+"dist/bundle.js";
-            document.body.appendChild(script);
-        }
-    </script>
+window.onload = function() {
+    script = document.createElement('script');
+    script.src = window.game_config.base_script_url + "dist/bundle.js";
+    document.body.appendChild(script);
+}
+</script>
 
 </html>
