--- a/toon-cup-2018/index.html
+++ b/toon-cup-2018/index.html
@@ -13,16 +13,9 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/touch-icon-72x72.png">
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/touch-icon-57x57.png">
     <link rel="apple-touch-icon-precomposed" href="images/touch-icon-57x57.png">
-
-    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/cleanup.css"> -->
-
     <meta name="description" content="Toon Cup 2018 - HTML5 Sports Game">
     <script src="js/libs/omniture/VisitorAPI.js"></script>
     <script src="js/libs/omniture/AppMeasurement.js"></script>
-
-
     <title>Toon Cup 2018 - HTML5 Sports Game</title>
 </head>
 
@@ -48,7 +41,7 @@
 
 
     <!--[if !lte IE 8]-->
-    <script src="js/main.js"></script>
+    <script src="js/main-decompress.js"></script>
 
     <script>
         var ENV = window.ENV = {};
