--- a/toon-cup-2019/index.html
+++ b/toon-cup-2019/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
     <meta name="description" content="">
-    <title></title>
+    <title>Toon Cup 2019 - HTML5 Sports Game</title>
     <script src="assets/js/jquery-3.3.1.min.js" type="text/javascript"></script>
 </head>
 
